alignment fix

--- a/style/centre-style.css
+++ b/style/centre-style.css
@@ -2,25 +2,31 @@ html {
     background: #FAFAFA;
 }
 
+.navrow{
+        height: 200px;
+}
 
 .tile img {
-    width: 50%;
+    width: 45%;
+    display: inline;
     position: relative;
-    display: block;
-    margin: 50%;
-    align-content: center;
-    background: #134ce9;
+    vertical-align: top;
 
 }
 
-.tilename {
-    background: #161def;
+#tilename {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: inline;
+    position: relative;
+    width: 45%;
+    text-align:end;
+    vertical-align: text-bottom;
 }
 
 .tile {
     box-sizing: border-box;
-    width: 270px;
+    display: inline;
+    width: 265px;
     height: 200px;
     background: #C7EEFF;
     border: 1px solid white;
